# pubsub_simple_example

./: README.md  docker-compose.yaml
publisher/: Dockerfile  pyproject.toml
publisher/src/: api.py  publishing.py
subscriber/: Dockerfile  app.py  pyproject.toml
