[tool.poetry]
name = "subscriber"
version = "0.1.0"
description = ""
authors = ["Svitlana Sumets <svetasumets@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
redis = "^3.5.3"
environs = "^9.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
